Advanced_Feature/3.16_TCPRoute_Listener/gw-tcp-route.yaml
# Gateway API TCPRoute kind 미지원. BNK native: protocol TCP + L4Route
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tcp-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: TCP
      port: 80

      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: L4Route
            group: gateway.k8s.f5net.com

    - name: bnk-listener-8080
      protocol: TCP
      port: 8080

      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: L4Route
            group: gateway.k8s.f5net.com
